--- a/src/Component/Navbar/Navbar.module.css
+++ b/src/Component/Navbar/Navbar.module.css
@@ -248,7 +248,9 @@ li {
 
 
   .logo img{
-    width: 60%;
+    width: 39%;
+    /* border: 1px solid red; */
+
   
   }
 
@@ -277,7 +279,8 @@ li {
   }
 
   .logo img{
-    width: 60%;
+    width: 50%;
+    /* border: 1px solid red; */
    
   }
   .social-media {
