--- a/src/Component/Pages/Gallery.module.css
+++ b/src/Component/Pages/Gallery.module.css
@@ -30,6 +30,18 @@
   
 }
 
+
+.Btn{
+    width: 30%;
+    border: 10px solid #d1deee;
+    font-size: 1.5rem;
+    border-radius: 50rem;
+    padding: 2.5%;
+    background-image: linear-gradient(#c0d3e3, #d8e4ee);
+    box-shadow: inset rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+
   
 
 
