--- a/src/Component/Footer/Footer.module.css
+++ b/src/Component/Footer/Footer.module.css
@@ -143,13 +143,15 @@
     
     .footIcon{
         /* border: 1px solid red; */
-        width: 10%;
+        width: 20%;
         margin: auto;
         justify-content: space-around;
         padding: 1%;
         font-size: 2rem;
-     
+        display: flex;    
     }
+
+
     
     .CreatedBy{
         /* border: 1px solid red; */
@@ -183,16 +185,15 @@
     
     .footIcon{
         /* border: 1px solid red; */
-        width: 10%;
+        width: 20%;
         margin: auto;
         justify-content: space-around;
         padding: 1%;
         font-size: 2rem;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
-        
+        display: flex;    
     }
+
+  
 
     
     .CreatedBy{
